<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zoedepth</name>
  <version>0.0.1</version>
  <description>ROS2 package for monocular depth estimation using ZoeDepth</description>
  <maintainer email="victor.talpaert@gmail.com">todo</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>python3-opencv</depend>
  <depend>python3-torch</depend>
  <depend>python3-torchvision</depend>
  <depend>python3-timm-pip</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>